# correct-dicom-directory-structure

./: README  README.md  delete_crc.py  get_series_attributes.py  hcs_curation.py  integrate.py  issues_cases.py  main.py  messages.py  read_nifti.py  split_series.py
.github/workflows/: workflow.yml
python/: main.py  pyproject.toml
python/prm/: devices.txt  images_per_modality.txt
