[project]
dependencies = [
  "fire==0.6.0",
  "nibabel==5.2.1",
  "pydicom==2.4.4",
  "tqdm==4.66.2"
]
name = "correct-dicom-directory-structure"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.5.0",
  "djlint==1.34.1",
  "mypy==1.10.0",
  "ruff==0.4.2",
  "ssort==0.13.0",
  "toml-sort==0.23.1"
]

[project.scripts]
correct_dicom_directory_structure = "main:main_cli"

[tool.setuptools]
py-modules = ["main"]
